[package]
name = "cch23-hawthorne"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
base64 = "0.21.5"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.40"
